# bop

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  todo.md
components/: README.md
config/: Bop.toml
core/: Cargo.toml
core/src/: notion.rs  renderer.rs
lib/: buffer.rs  lib.rs
notion/: Cargo.toml
photon/: Cargo.toml  README.md
resources/: README.md
src/: Cargo.toml  arguments.rs  bop.rs  lib.rs
