[package]
name = "bop"
version = "0.1.0"
description = "Experimental editor infrastructure"
repository = "https://github.com/zypeh/bop"
homepage = "https://github.com/zypeh/bop"
keywords = ["editor", "infrastructure", "text"]
license = "BSD-2-Clause"
authors = ["zypeh <zypeh.geek@gmail.com>"]

[dependencies.clap]
version = "~2.19.0"

#[lib]
#name = "bop"
#path = "lib/lib.rs"

[[bin]]
name = "bop"
path = "src/bop.rs"
doc = false
